--- a/work-dev-web/ex02-show-age.html
+++ b/work-dev-web/ex02-show-age.html
@@ -1,5 +1,5 @@
-<!-- 2) Escreva um script que leia a data e a hora de seu nascimento e informe a sua idade em anos,
-dias, horas, minutos e segundos -->
+<!--  2) Escreva um script que leia a data e a hora de seu nascimento e informe a sua idade em anos,
+dias, horas, minutos e segundos. -->
 <!DOCTYPE html>
 <html lang="en">
 
