--- a/validate-form/index.html
+++ b/validate-form/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title> Exercício Form </title>
+  <script src="./script.js" defer></script>
 </head>
 
 <body bgcolor="#c8d8f8">
