finish index.html

--- a/validate-form/index.html
+++ b/validate-form/index.html
@@ -70,7 +70,7 @@
     </center>
   </form>
 
-  <script src="../validate-form/script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
