finish colored table

--- a/colored-table/table-one.html
+++ b/colored-table/table-one.html
@@ -17,32 +17,35 @@
 </style>
 
 <body>
-  <table>
-    <tr>
-      <th class="column-book">Livro</th>
-      <th class="column-pages">Páginas</th>
-    </tr>
-    <tr>
-      <td class="column-book">Biografia de Padre Leo</td>
-      <td class="column-pages">678</td>
-    </tr>
-    <tr>
-      <td class="column-book">Biografia de Roberto Gomez Bolaños</td>
-      <td class="column-pages">220</td>
-    </tr>
-    <tr>
-      <td class="column-book">O diabo dos números</td>
-      <td class="column-pages">526</td>
-    </tr>
-    <tr>
-      <td class="column-book">A Bíblia Sagrada</td>
-      <td class="column-pages">1357</td>
-    </tr>
-    <tr>
-      <td class="column-book">Dom Quixote e Sancho Pança</td>
-      <td class="column-pages">1500</td>
-    </tr>
-  </table>
+  <center>
+    <table>
+      <tr>
+        <th class="books">Livro</th>
+        <th class="pages">Páginas</th>
+      </tr>
+      <tr>
+        <td class="books">Biografia de Padre Leo</td>
+        <td class="pages">678</td>
+      </tr>
+      <tr>
+        <td class="books">Biografia de Roberto Gomez Bolaños</td>
+        <td class="pages">220</td>
+      </tr>
+      <tr>
+        <td class="books">O diabo dos números</td>
+        <td class="pages">526</td>
+      </tr>
+      <tr>
+        <td class="books">A Bíblia Sagrada</td>
+        <td class="pages">1357</td>
+      </tr>
+      <tr>
+        <td class="books">Dom Quixote e Sancho Pança</td>
+        <td class="pages">1500</td>
+      </tr>
+    </table>
+  </center>
+
 
   <script src="script.js"></script>
 </body>
