--- a/3-table-exercises/exercise2/index.html
+++ b/3-table-exercises/exercise2/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <h1>Digite sua lista de compras</h1>
   <div class="table">
     <form id="form">
       <div id="table-form">
