finished index.html

--- a/8-meteorologic-conditions/index.html
+++ b/8-meteorologic-conditions/index.html
@@ -8,24 +8,15 @@
   <title>Trabalho 08</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="script.js"></script>
-  <style>
-    input,
-    button {
-      display: block;
-      margin: 10px auto;
-    }
-
-    p {
-      text-align: center;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <input type="text">
-  <button type="btnWeather">Pesquisar Clima</button>
-  <div id="resultado">
-    <p>Pesquise acima para aparecer o resultado aqui</p>
+  <p id="paragraph"><b>Pesquise o nome da cidade para exibir o clima</b></p>
+  <input id="input" type="text" placeholder="Ex: Delfim Moreira">
+  <button type="button" id="btnWeather"><b>Pesquisar Clima</b></button>
+  <div id="result">
+    <p>&copy; 2021 João Lucas. All rights reserved.</p>
   </div>
 </body>
 
